tests/rustdoc-ui/doc-cfg.stderr
error: `only "hide" or "show" are allowed in "#[doc(auto_cfg(...))]"`
  --> $DIR/doc-cfg.rs:11:7
   |
LL | #[doc(auto_cfg(42))]
   |       ^^^^^^^^^^^^
   |
   = note: `#[deny(invalid_doc_attributes)]` on by default

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or key/value items
  --> $DIR/doc-cfg.rs:12:21
   |
LL | #[doc(auto_cfg(hide(true)))]
   |                     ^^^^

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or key/value items
  --> $DIR/doc-cfg.rs:13:21
   |
LL | #[doc(auto_cfg(hide(42)))]
   |                     ^^

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or key/value items
  --> $DIR/doc-cfg.rs:14:21
   |
LL | #[doc(auto_cfg(hide("a")))]
   |                     ^^^

error: `#![doc(auto_cfg(hide(...)))]` only accepts identifiers or key/value items
  --> $DIR/doc-cfg.rs:15:21
   |
LL | #[doc(auto_cfg(hide(foo::bar)))]
   |                     ^^^^^^^^

error: `cfg` predicate is not specified
  --> $DIR/doc-cfg.rs:3:7
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   |       ^^^^^ help: expected syntax is: `cfg(/* predicate */)`

error: multiple `cfg` predicates are specified
  --> $DIR/doc-cfg.rs:3:23
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   |                       ^^^

error: `cfg` predicate is not specified
  --> $DIR/doc-cfg.rs:9:7
   |
LL | #[doc(cfg())]
   |       ^^^^^ help: expected syntax is: `cfg(/* predicate */)`

error: multiple `cfg` predicates are specified
  --> $DIR/doc-cfg.rs:10:16
   |
LL | #[doc(cfg(foo, bar))]
   |                ^^^

error: aborting due to 9 previous errors

